# pitchai-monitoring

./: .dockerignore  .gitignore  .semgrep.yml  .semgrepignore  AUTOPAR_MONITORING.md  Dockerfile  Dockerfile.auth-usage  Dockerfile.monitoring  README.md  autopar_log_analyzer.py  autopar_monitoring_agent.py  claude_api_wrapper.py  claude_cli_wrapper.py  claude_monitoring_agent.py  claude_wrapper.sh  cron_test.py  demo_master_report.py  deploy-production.sh  deployment_trigger.txt  docker-compose.monitoring.yml  docker-compose.yml  fix_ssh_key.py  get_chat_id.py  get_chat_id_auto.py  main.py  master_log_aggregator.py  master_log_simple.py  master_log_working.py  package-lock.json  package.json  playwright.config.js  production_monitoring.md  pyproject.toml  pytest.ini  python_scheduler.py  quickchat_monitoring_agent.py  requirements-auth-usage.txt  requirements-dev.txt  requirements.txt  telegram_helper.py  (+8 more)
.github/workflows/: ci-cd.yaml  (+2 more)
auth_usage_dashboard/: __init__.py  app.py  capacity.py  deployment_check.py  history.py  runout.py  server.py  service.py  settings.py  source.py
config/: autopar-staging-monitoring.yaml  monitoring.yaml  telegram_config.json
docs/: codex-auth-usage-dashboard.md  events-bus-delivery.md  external-e2e-tests-colleague-guide.md  monitoring-system-current-state-audit-2026-07-04.md  python-quality-gate.md
domain_checks/: __init__.py  common_check.py  config.yaml  dispatch_client.py  docker_unix.py  event_bus.py  history.py  main.py  metrics_api_contract.py  metrics_container_health.py  metrics_dns.py  metrics_nginx.py  metrics_proxy.py  metrics_red.py  metrics_slo.py  metrics_synthetic.py  metrics_tls.py  metrics_web_vitals.py  telegram.py
e2e_registry/: __init__.py  alerts.py  app.py  auth.py  db.py  monitor_dashboard.py  schema.py  server.py  settings.py  stepflow.py
e2e_runner/: __init__.py  main.py
e2e_sandbox/: __init__.py  playwright_python.py  puppeteer_js_runner.js
e2e_tests/: afasask_demo_codex_fast_ok.py  afasask_gzb_codex_medium_ok.py
monitoring/: __init__.py  config.py
ops/: codexusage.pitchai.net.bootstrap.nginx.conf  codexusage.pitchai.net.nginx.conf  deploy_codex_usage_dashboard.sh  monitoring.pitchai.net.nginx.conf  renew_codexusage_certificate.sh
scripts/: __init__.py  check.py  check_nested_event_loops.py  check_no_dense_inline_comprehensions.py  check_no_pure_wrapper_functions.py  check_no_single_use_one_line_functions.py  check_no_vague_signatures.py  collect_logs.py  daily_ai_monitoring.py  daily_report.py  deploy-production.sh  run_tests.py
specs/: external-e2e-tests-registry.md
telegram/: __init__.py  claude_telegram_bot.py  get_telegram_chat_id.py  launcher.py  start_claude_bot.sh  telegram_bot_server.py  telegram_notifier.py
telegram_integration/: __init__.py  launcher.py  start_claude_bot.sh
tests/: afasask-critical-journey-metadata.yaml  afasask-critical-journey.spec.js  chat_interaction_test.spec.js  checkout_test.yaml  example_test.yaml  test_alerting_state.py  test_api_contract_and_synthetic.py  test_auth_usage_capacity.py  test_auth_usage_dashboard_api.py  test_auth_usage_dashboard_ui_e2e.py  test_auth_usage_deployment_check.py  test_auth_usage_history_forecast.py  test_browser_fallback.py  test_browser_infra_detection.py  test_config_and_plugins.py  test_dispatch_client.py  test_dns_tls_proxy_container_nginx.py  test_domain_disabling.py  test_e2e_registry_base_url_policy.py  test_e2e_registry_dispatch_isolation.py  test_e2e_registry_runner_integration.py  test_e2e_registry_stepflow_validation.py  test_e2e_registry_ui_e2e.py  test_e2e_runner_secret_forwarding.py  test_entra_sso_edge_config.py  test_event_bus.py  test_history_metrics.py  test_host_and_performance_checks.py  test_live_dispatch.py  test_live_domains.py  test_live_e2e_registry_prod.py  test_live_metrics.py  test_local_server_checks.py  test_monitor_dashboard_ui_e2e.py  test_telegram_chunking.py
(+66 files in other folders)
