[project]
name = "pitchai-monitoring-quality"
version = "0.0.0"
description = "Fail-closed Python quality tooling for PitchAI Service Monitoring"
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scripts"]

[project.scripts]
check = "scripts.check:main"
checkz = "scripts.check:main"

[tool.uv]
package = true

[dependency-groups]
dev = [
  "basedpyright>=1.39.8",
  "pylint>=4.0.5",
  "ruff>=0.15.17",
  "semgrep>=1.166.0",
]

[tool.ruff]
line-length = 120
target-version = "py312"
extend-exclude = [
  ".git",
  ".mypy_cache",
  ".pytest_cache",
  ".ruff_cache",
  ".semgrep",
  ".venv",
  ".vscode",
  "__pycache__",
  "archive",
  "build",
  "dist",
  "scripts",
  "tests",
  "venv",
]
force-exclude = true
preview = true
indent-width = 4

[tool.ruff.lint]
select = ["ALL"]
preview = true
fixable = ["ALL"]
unfixable = []
ignore = ["CPY001", "COM812", "G004", "RET504", "SIM108"]

[tool.ruff.lint.mccabe]
max-complexity = 20

[tool.ruff.lint.pydocstyle]
convention = "google"
ignore-var-parameters = true

[tool.ruff.lint.flake8-annotations]
mypy-init-return = true
suppress-dummy-args = true

[tool.ruff.lint.flake8-type-checking]
quote-annotations = true
strict = true

[tool.ruff.lint.pylint]
max-nested-blocks = 4
max-locals = 30

[tool.ruff.format]
docstring-code-format = false

[tool.basedpyright]
typeCheckingMode = "strict"
failOnWarnings = true
include = ["domain_checks", "e2e_registry", "e2e_runner", "e2e_sandbox"]
exclude = [
  ".git",
  ".venv",
  ".vscode",
  "__pycache__",
  "archive",
  "build",
  "dist",
  "scripts",
  "tests",
  "venv",
]
pythonVersion = "3.12"
pythonPlatform = "All"
venvPath = "."
venv = ".venv"
allowedUntypedLibraries = []
reportAny = "error"
reportExplicitAny = "error"
reportInvalidCast = "error"
reportImplicitRelativeImport = "error"
reportPrivateLocalImportUsage = "error"
reportUnusedParameter = "error"
reportImplicitAbstractClass = "error"
reportInvalidAbstractMethod = "error"
reportIncompatibleUnannotatedOverride = "error"
reportUnannotatedClassAttribute = "error"

[tool.pylint.main]
jobs = 0
reports = "no"
ignore-paths = ['(^|.*/)(tests|scripts)/.*']
load-plugins = [
  "pylint.extensions.broad_try_clause",
  "pylint.extensions.overlapping_exceptions",
]

[tool.pylint."messages control"]
disable = ["all"]
enable = [
  "R0801",
  "R0401",
  "C0302",
  "E1120",
  "E1121",
  "E1123",
  "W0717",
  "W0707",
  "W0714",
  "W0702",
  "W0718",
  "W0719",
  "W0706",
]

[tool.pylint.similarities]
min-similarity-lines = 6
ignore-comments = true
ignore-docstrings = true
ignore-imports = true
ignore-signatures = true

[tool.pylint.format]
max-module-lines = 250
